tests/stage2/valid/if-comp.c
int main(){
    int a = 0;
    if(a == 0){
        a = 3;
        a *= 50;
    }
    return a;
}
