tests/stage2/invalid/tenary_no_cond.c
int main(){
    int a = 0;
    a = ? 1 : 0;
    return 0;
}
